ghc-6.2/hslibs/win32/Win32MM_stub_ffi.h

extern void prim_copyMemory(void * arg1,void * arg2,DWORD arg3);
extern void prim_fillMemory(void * arg1,DWORD arg2,BYTE arg3);
extern HANDLE prim_getProcessHeap();
extern DWORD prim_getProcessHeaps(DWORD arg1,void * arg2);
extern UINT prim_gMEM_FIXED();
extern UINT prim_gMEM_MOVEABLE();
extern UINT prim_gPTR();
extern UINT prim_gHND();
extern UINT prim_gMEM_DDESHARE();
extern UINT prim_gMEM_SHARE();
extern UINT prim_gMEM_LOWER();
extern UINT prim_gMEM_NOCOMPACT();
extern UINT prim_gMEM_NODISCARD();
extern UINT prim_gMEM_NOT_BANKED();
extern UINT prim_gMEM_NOTIFY();
extern UINT prim_gMEM_ZEROINIT();
extern void* prim_globalAlloc(UINT arg1,DWORD arg2);
extern HGLOBAL access_prim_globalAlloc_res1(HsPtr);
extern int access_prim_globalAlloc_gc_failed(HsPtr);
extern void* access_prim_globalAlloc_gc_failstring(HsPtr);
extern void* prim_globalFlags(HGLOBAL arg1);
extern UINT access_prim_globalFlags_res1(HsPtr);
extern int access_prim_globalFlags_gc_failed(HsPtr);
extern void* access_prim_globalFlags_gc_failstring(HsPtr);
extern void* prim_globalFree(HGLOBAL arg1);
extern HGLOBAL access_prim_globalFree_res1(HsPtr);
extern int access_prim_globalFree_gc_failed(HsPtr);
extern void* access_prim_globalFree_gc_failstring(HsPtr);
extern void* prim_globalHandle(void * arg1);
extern HGLOBAL access_prim_globalHandle_res1(HsPtr);
extern int access_prim_globalHandle_gc_failed(HsPtr);
extern void* access_prim_globalHandle_gc_failstring(HsPtr);
extern void* prim_globalLock(HGLOBAL arg1);
extern void * access_prim_globalLock_res1(HsPtr);
extern int access_prim_globalLock_gc_failed(HsPtr);
extern void* access_prim_globalLock_gc_failstring(HsPtr);
extern void* prim_globalReAlloc(HGLOBAL arg1,DWORD arg2,UINT arg3);
extern HGLOBAL access_prim_globalReAlloc_res1(HsPtr);
extern int access_prim_globalReAlloc_gc_failed(HsPtr);
extern void* access_prim_globalReAlloc_gc_failstring(HsPtr);
extern void* prim_globalSize(HGLOBAL arg1);
extern DWORD access_prim_globalSize_res1(HsPtr);
extern int access_prim_globalSize_gc_failed(HsPtr);
extern void* access_prim_globalSize_gc_failstring(HsPtr);
extern void* prim_globalUnlock(HGLOBAL arg1);
extern int access_prim_globalUnlock_gc_failed(HsPtr);
extern void* access_prim_globalUnlock_gc_failstring(HsPtr);
extern DWORD prim_hEAP_GENERATE_EXCEPTIONS();
extern DWORD prim_hEAP_NO_SERIALIZE();
extern DWORD prim_hEAP_ZERO_MEMORY();
extern void* prim_heapAlloc(HANDLE arg1,DWORD arg2,DWORD arg3);
extern void * access_prim_heapAlloc_res1(HsPtr);
extern int access_prim_heapAlloc_gc_failed(HsPtr);
extern void* access_prim_heapAlloc_gc_failstring(HsPtr);
extern void* prim_heapCompact(HANDLE arg1,DWORD arg2);
extern UINT access_prim_heapCompact_res1(HsPtr);
extern int access_prim_heapCompact_gc_failed(HsPtr);
extern void* access_prim_heapCompact_gc_failstring(HsPtr);